tests2/tests/snapshots/test__typescript__ts-export-to-namespaces-both.snap
---
source: tests2/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
ts-export-to-namespaces-both (7677 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.



export namespace test {
    export namespace types {
        export type BasicEnum = "A" | "B";

        export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

        export type EnumReferenceRecordKey = { 
		a: Partial<{ [key in $specta$root$test$.types.BasicEnum]: number }>,
	};

        export type ExtraBracketsInTupleVariant = { A: string };

        export type ExtraBracketsInUnnamedStruct = string;

        export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

        export type FlattenEnumStruct = ($specta$root$test$.types.FlattenEnum) & { 
		outer: string,
	};

        export type FlattenOnNestedEnum = ($specta$root$test$.types.NestedEnum) & { 
		id: string,
	};

        export type GenericStruct<T> = { 
		arg: T,
	};

        export type HasGenericAlias = { [key in number]: string };

        export type InlineEnumField = { A: $specta$root$test$.types.PlaceholderInnerField };

        export type InlineOptionalType = { 
		optional_field: $specta$root$test$.types.PlaceholderInnerField | null,
	};

        export type InlineStruct = { 
		ref_struct: $specta$root$test$.types.SimpleStruct,
		val: number,
	};

        export type InlineTuple = { 
		demo: [string, boolean],
	};

        export type InlineTuple2 = { 
		demo: [$specta$root$test$.types.InlineTuple, boolean],
	};

        export type InlinerStruct = { 
		inline_this: $specta$root$test$.types.InlineStruct,
		dont_inline_this: $specta$root$test$.types.RefStruct,
	};

        export type Issue281 = { 
		default_unity_arguments: string[],
	};

        /**
 * https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

        export type KebabCase = { 
		"test-ing": string,
	};

        export type MyEmptyInput = Record<string, never>;

        export type MyEnum = { A: string } | { B: number };

        export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

        export type OverridenStruct = { 
		overriden_field: string,
	};

        export type PlaceholderInnerField = { 
		a: string,
	};

        export type Recursive = { 
		a: number,
		children: $specta$root$test$.types.Recursive[],
	};

        export type RefStruct = $specta$root$test$.types.TestEnum;

        export type Rename = "OneWord" | "Two words";

        export type RenameWithWeirdCharsField = { 
		odata_context: string,
	};

        export type RenameWithWeirdCharsVariant = { "@odata.context": string };

        export type SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

        export type SkipVariant = { A: string };

        export type SkipVariant2 = { tag: "A"; data: string };

        export type SkipVariant3 = { A: { a: string } };

        export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

        export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

        export type TransparentType = $specta$root$test$.types.TransparentTypeInner;

        export type TransparentType2 = null;

        export type TransparentTypeInner = { 
		inner: string,
	};

        export type TransparentTypeWithOverride = string;

        export type TupleStruct1 = number;

        export type TupleStruct3 = [number, boolean, string];

        export type Unit1 = null;

        export type Unit2 = Record<string, never>;

        export type Unit3 = [];

        export type Unit4 = null;

        export type Unit5 = "A";

        export type Unit6 = { A: [] };

        export type Unit7 = { A: Record<string, never> };


        export namespace type_type {
            export type Type = never;

        }
    }
}

export namespace virtual {
    export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"17": string,
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"20": { 
	secs: number,
	nanos: number,
},
		"21": string,
		"22": boolean,
		"23": number,
		"24": number[],
		"25": number[],
		"26": number[],
		"27": $specta$root$test$.types.MyEnum[],
		"28": $specta$root$test$.types.MyEnum[],
		"29": $specta$root$test$.types.MyEnum[],
		"2a": number[],
		"2b": number[],
		"2c": number | null,
		"2d": null | null,
		"2e": $specta$root$test$.types.Unit1,
		"2f": $specta$root$test$.types.Unit2,
		"30": $specta$root$test$.types.Unit3,
		"31": $specta$root$test$.types.Unit4,
		"32": $specta$root$test$.types.Unit5,
		"33": $specta$root$test$.types.Unit6,
		"34": $specta$root$test$.types.Unit7,
		"35": $specta$root$test$.types.SimpleStruct,
		"36": $specta$root$test$.types.TupleStruct1,
		"37": $specta$root$test$.types.TupleStruct3,
		"38": $specta$root$test$.types.TestEnum,
		"39": $specta$root$test$.types.RefStruct,
		"3a": $specta$root$test$.types.InlinerStruct,
		"3b": $specta$root$test$.types.GenericStruct<number>,
		"3c": $specta$root$test$.types.GenericStruct<string>,
		"3d": $specta$root$test$.types.FlattenEnumStruct,
		"3e": $specta$root$test$.types.OverridenStruct,
		"3f": $specta$root$test$.types.HasGenericAlias,
		"40": $specta$root$test$.types.SkipVariant,
		"41": $specta$root$test$.types.SkipVariant2,
		"42": $specta$root$test$.types.SkipVariant3,
		"43": $specta$root$test$.types.EnumMacroAttributes,
		"44": $specta$root$test$.types.Recursive,
		"45": $specta$root$test$.types.InlineEnumField,
		"46": $specta$root$test$.types.InlineOptionalType,
		"47": $specta$root$test$.types.Rename,
		"48": $specta$root$test$.types.TransparentType,
		"49": $specta$root$test$.types.TransparentType2,
		"4a": $specta$root$test$.types.TransparentTypeWithOverride,
		"4b": (number | null)[],
		"4c": Partial<{ [key in $specta$root$test$.types.BasicEnum]: null }>,
		"4d": number | null,
		"4e": $specta$root$test$.types.PlaceholderInnerField[],
		"4f": Partial<{ [key in $specta$root$test$.types.BasicEnum]: number }>,
		"50": $specta$root$test$.types.EnumReferenceRecordKey,
		"51": $specta$root$test$.types.FlattenOnNestedEnum,
		"52": null,
		"53": null,
		"54": never,
		"55": $specta$root$test$.types.MyEmptyInput,
		"56": string,
		"57": [string],
		"58": $specta$root$test$.types.ExtraBracketsInTupleVariant,
		"59": $specta$root$test$.types.ExtraBracketsInUnnamedStruct,
		"5a": $specta$root$test$.types.MyEnum[],
		"5b": $specta$root$test$.types.InlineTuple,
		"5c": $specta$root$test$.types.InlineTuple2,
		"5d": string,
		"5e": string,
		"5f": $specta$root$test$.types.SkippedFieldWithinVariant,
		"60": $specta$root$test$.types.KebabCase,
		"61": string[],
		"62": $specta$root$test$.types.Issue281,
		"63": $specta$root$test$.types.RenameWithWeirdCharsField,
		"64": $specta$root$test$.types.RenameWithWeirdCharsVariant,
		"65": $specta$root$test$.types.Issue374,
		"66": $specta$root$test$.types.type_type.Type,
	};

}

export import $specta$root$test$ = test;
export import $specta$root$virtual$ = virtual;
════════════════════════════════════════
